--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.5.2
	- Fix issue where prevent multiple logins would prevent all logins

--------------------------------------------------------------------------
  v.3.5.1 24/06/2009
	- Make the PHP error a little clearer for windows users by indicating
		that their version of PHP is < 5.3 (required for windows)
	- Fix random methods not working for Localplay
	- Fix extra space on prefixed albums (Thx ibizaman)
	- Add missing operator on tag and rating searches so they will
		work with other methods (Thx kiehnet@netscape.net)
	- Fix get_art_url() so it returns something... 
	- Fix problem with creating new playlists where it doesn't work
		but appending to an existing did. 
	- Fixed issue with url_to_song, also cleaned up the code a bit
	- Fixed issue with Random All Catalogs
	- Fixed issues with API and Tag methods not working as advertised
	- Fix endless loop in getid3() with malformed genre tags in mp3s
	- Fixed show test page always returning false on web path
	- Update Man page to adhear to newer Debian rules
	- Fixed issue with Videos being incorrectly registered with stats
		and now playing as songs. 
	- Fixed missing > in HTML for song row

--------------------------------------------------------------------------
  v.3.5 05/05/2009
	- Added complete Czech translation (Thx martin hason)
	- Add the AlmightyOatmeal-Sanity check to prevent a clean from
		removing all songs if your mount failed, but is still
		readable by ampache
	- Make the Lang Install page prettier
	- Added Check for hash,inet_pton,windows PHP Version to init so
		that upgrades without pre-reqs are handled correctly
	- Allow mms,mmsh,mmsu,mmst,rstp in Radio Stream URLs