@@ -332,9 +332,9 @@ class Preference {
 	 * load_from_session
 	 * This loads the preferences from the session rather then creating a connection to the database
 	 */ 
-	public static function load_from_session() { 
-
-		if (is_array($_SESSION['userdata']['preferences'])) { 
+	public static function load_from_session($uid=-1) { 
+		
+		if (is_array($_SESSION['userdata']['preferences']) AND $_SESSION['userdata']['uid'] == $uid) { 
 			Config::set_by_array($_SESSION['userdata']['preferences'],1); 
 			return true; 
 		} 
@@ -388,13 +388,13 @@ class Preference {
 	 * to initialize the needed variables
 	 */
 	public static function init() { 
+		
+		$user_id = $GLOBALS['user']->id ? Dba::escape($GLOBALS['user']->id) : '-1'; 
 
 		// First go ahead and try to load it from the preferences
-		if (self::load_from_session()) { 
+		if (self::load_from_session($user_id)) { 
 			return true; 	
 		} 
-
-		$user_id = $GLOBALS['user']->id ? Dba::escape($GLOBALS['user']->id) : '-1'; 
 
 	        /* Get Global Preferences */
 		$sql = "SELECT `preference`.`name`,`user_preference`.`value`,`syspref`.`value` AS `system_value` FROM `preference` " . 
@@ -421,6 +421,7 @@ class Preference {
 
 	        Config::set_by_array($results,1);
 		$_SESSION['userdata']['preferences'] = $results; 
+		$_SESSION['userdata']['uid'] = $user_id; 
 
 	} // init
 
