@@ -243,9 +243,9 @@ elseif (!Config::get('use_auth')) {
 }
 // If Auth, but no session is set
 else { 
-	if (isset($_REQUEST['sessid'])) { 
+	if (isset($_REQUEST['sid'])) { 
 		session_name(Config::get('session_name')); 
-		session_id(scrub_in($_REQUEST['sessid']));
+		session_id(scrub_in($_REQUEST['sid']));
 		session_start();
 		$GLOBALS['user'] = User::get_from_username($_SESSION['userdata']['username']);
 	}
